--- a/complete-node-bootcamp/1-node-farm/starter/package.json
+++ b/complete-node-bootcamp/1-node-farm/starter/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./index.ts"
+    "start": "ts-node ./index.ts",
+    "start:dev": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.0"
+    "@types/node": "^18.11.0",
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "slugify": "^1.6.5"
   }
 }
