--- a/complete-node-bootcamp/4-natours/starter/package.json
+++ b/complete-node-bootcamp/4-natours/starter/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "dev": "nodemon ./server/server.ts"
+    "dev": "NODE_ENV=development nodemon ./server/server.ts"
   },
   "keywords": [],
   "author": "",
