--- a/complete-node-bootcamp/4-natours/starter/package.json
+++ b/complete-node-bootcamp/4-natours/starter/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
@@ -24,6 +25,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5",
+    "validator": "^13.7.0"
   }
 }
