add user routes

--- a/complete-node-bootcamp/4-natours/starter/package.json
+++ b/complete-node-bootcamp/4-natours/starter/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "dev": "NODE_ENV=development nodemon ./server/server.ts"
+    "dev": "NODE_ENV=development nodemon ./server/server.ts",
+    "prod": "NODE_ENV=production nodemon ./server/server.ts"
   },
   "keywords": [],
   "author": "",
