--- a/complete-node-bootcamp/4-natours/starter/package.json
+++ b/complete-node-bootcamp/4-natours/starter/package.json
@@ -37,6 +37,7 @@
     "hpp": "^0.2.3",
     "jose": "^4.10.4",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.12.0",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
