--- a/complete-node-bootcamp/4-natours/starter/package.json
+++ b/complete-node-bootcamp/4-natours/starter/package.json
@@ -19,7 +19,9 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.6",
+    "@types/sharp": "^0.31.0",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
@@ -40,8 +42,10 @@
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "pug": "^3.0.2",
+    "sharp": "^0.31.2",
     "slugify": "^1.6.5",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
