--- a/complete-node-bootcamp/4-natours/starter/package.json
+++ b/complete-node-bootcamp/4-natours/starter/package.json
@@ -17,10 +17,12 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/hpp": "^0.2.2",
+    "@types/html-to-text": "^8.1.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.6",
+    "@types/pug": "^2.0.6",
     "@types/sharp": "^0.31.0",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
@@ -37,6 +39,7 @@
     "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^8.2.1",
     "jose": "^4.10.4",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.12.0",
