--- a/complete-node-bootcamp/4-natours/starter/package.json
+++ b/complete-node-bootcamp/4-natours/starter/package.json
@@ -50,6 +50,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.31.2",
     "slugify": "^1.6.5",
+    "stripe": "^11.1.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   }
